# MVCtodoList

./: AbstractController.h  CMakeLists.txt  Controller.cpp  Controller.h  Model.cpp  Model.h  Observer.h  Subject.h  Task.cpp  Task.h  ToDoListView.cpp  ToDoListView.h  TodoList.cpp  TodoList.h  View.cpp  View.h  main.cpp
test/: CMakeLists.txt  ListTest.cpp  ModelTest.cpp  TaskFixture.cpp  TaskTest.cpp
test/lib/googletest-main/: CMakeLists.txt  README.md
test/lib/googletest-main/docs/: faq.md  gmock_cook_book.md
test/lib/googletest-main/docs/reference/: matchers.md
test/lib/googletest-main/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-more-actions.h  gmock-spec-builders.h
test/lib/googletest-main/googlemock/include/gmock/internal/: gmock-internal-utils.h
test/lib/googletest-main/googlemock/src/: gmock-cardinalities.cc  gmock-spec-builders.cc
test/lib/googletest-main/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-more-actions_test.cc  gmock-pp_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h
test/lib/googletest-main/googletest/: README.md
test/lib/googletest-main/googletest/test/: googletest-death-test-test.cc  googletest-fail-if-no-test-linked-test-with-disabled-test_.cc  googletest-fail-if-no-test-linked-test-with-enabled-test_.cc  googletest-options-test.cc  googletest-port-test.cc  googletest-printers-test.cc  googletest-setuptestsuite-test_.cc
